# ros-workspace

./: README.md  frames.gv  os-122116000061-metadata.json  rosgraph-slamtoolbox.dot  test.txt
.github/workflows/: docker-image.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lio_sam/include/lio_sam/: utility.hpp
install/lio_sam/lib/lio_sam/: lio_sam_featureExtraction  lio_sam_imageProjection  lio_sam_imuPreintegration  lio_sam_mapOptimization
install/lio_sam/share/lio_sam/: local_setup.bash  local_setup.dsv  local_setup.sh  package.bash  (+6 more)
install/ouster_ros/share/: LICENSE  LICENSE-bin
log/: latest_build
rosbag2_2023_09_10-11_58_39/: metadata.yaml  rosbag2_2023_09_10-11_58_39_0.db3
src/mini_bot_description/: CMakeLists.txt
src/mini_bot_description/config/: ekf.yaml
src/mini_bot_description/launch/: display.launch.py  robot_state.launch.py
src/mini_bot_description/rviz/: urdf_config.rviz
src/navigation/: CMakeLists.txt
src/navigation/src/: occupancy_grid_pub.cpp
src/pointcloud_to_laser/launch/: pcl_to_laser_launch.py
src/ros2_esp32/: CMakeLists.txt  package.xml
src/ros2_esp32/src/: cmd_vel_publisher.cpp  integer_publisher.cpp  string_publisher.cpp
src/snowplow/launch/: navigation_launch.py  physical_controls.launch.py  physical_navigation.launch.py  physical_simulation.launch.py  simulation.launch.py  slam_navigation.launch.py
src/snowplow/worlds/: competition.sdf  competition_1.sdf  competition_2.sdf  competition_3.sdf  competition_4.sdf
src/urdf_tutorial_r2d2/: package.xml  setup.py
trees/: frames.gv
(+993 files in other folders)
